@@ -27,7 +27,6 @@ use Path::Tiny;
         [
             grep {
                 /\[VerifyPhases\]/
-                && ! /^\[VerifyPhases\] .* has already been calculated by end of file gathering phase/
                 && ( Dist::Zilla->VERSION < 5.022
                     ? ! /^\[VerifyPhases\] file has been added after file gathering phase: 'Makefile.PL'/
                     : 1 )
