@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - avoid reporting false positives for core zilla attributes that
+            were set at construction time (via root config or stash)
 
 0.004     2014-11-01 08:47:41Z
           - fix tests that fail with Dist::Zilla 5.023 (changes to added_by
